# multispectral_imagery_processing

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_REORGANIZATION_SUMMARY.md  QUICKSTART.md  README.md  altitude_check_app.py  multi_check.py  multi_pic_organizer.py  pyproject.toml  requirements.txt  setup.py  wavelength_checker.py
config/: default_config.yaml
docs/: CONTRIBUTING.md
examples/: altitude_batch_processing.py  file_organization_example.py  wavelength_analysis_example.py
src/multispectral_toolkit/: __init__.py
src/multispectral_toolkit/core/: __init__.py  altitude_extractor.py  file_organizer.py  wavelength_analyzer.py
src/multispectral_toolkit/gui/: __init__.py  altitude_gui.py
src/multispectral_toolkit/utils/: __init__.py
tests/: __init__.py  test_altitude_extractor.py  test_file_organizer.py
