[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "multispectral-toolkit"
version = "1.0.0"
description = "A comprehensive toolkit for processing and analyzing multispectral imagery"
readme = "README.md"
authors = [
    {name = "Christian Rueda", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["multispectral", "imaging", "remote-sensing", "micasense", "exif", "gps"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "isort>=5.10.0",
]
all = [
    "multispectral-toolkit[gui,dev]",
]

[project.urls]
Homepage = "https://github.com/imchrisrueda/multispectral_imagery_processing"
Documentation = "https://github.com/imchrisrueda/multispectral_imagery_processing/blob/main/README.md"
Repository = "https://github.com/imchrisrueda/multispectral_imagery_processing"
"Bug Tracker" = "https://github.com/imchrisrueda/multispectral_imagery_processing/issues"

[project.scripts]
multispectral-altitude = "multispectral_toolkit.core.altitude_extractor:main"
multispectral-organize = "multispectral_toolkit.core.file_organizer:main"
multispectral-wavelength = "multispectral_toolkit.core.wavelength_analyzer:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["multispectral_toolkit*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/multispectral_toolkit --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
